# js-analyzer

./: .gitignore  README.md  candidates  candidates2  data-processing.hs  js-analyzer.cabal  log.adoc  stack.yaml
js-parser/: index.js  package-lock.json  package.json
results/: analysis.ipynb  contributors.txt  projects-2019-01-01.json
results/30-seconds/: 30-seconds-of-code-2018-12-17.json
results/Dogfalo/: materialize-2015-12-31.json  materialize-2018-12-01.json
results/GitbookIO/: gitbook-2015-12-30.json  gitbook-2018-12-27.json
results/GoogleChrome/: puppeteer-2018-12-17.json
results/Kickball/: awesome-selfhosted-2018-12-31.json
results/Leaflet/: Leaflet-2012-12-31.json  Leaflet-2015-12-28.json  Leaflet-2018-12-30.json
results/Modernizr/: Modernizr-2009-12-17.json  Modernizr-2012-12-30.json  Modernizr-2015-12-29.json  Modernizr-2018-11-12.json
results/NARKOZ/: hacker-scripts-2015-12-30.json
results/ReactTraining/: react-router-2015-12-31.json  react-router-2018-12-12.json
results/Reactive-Extensions/: RxJS-2012-11-17.json  RxJS-2015-12-31.json
results/RocketChat/: Rocket.Chat-2015-12-31.json  Rocket.Chat-2018-12-28.json
results/Semantic-Org/: Semantic-UI-2015-12-28.json  Semantic-UI-2018-10-21.json
results/TryGhost/: Ghost-2015-12-28.json  Ghost-2018-12-20.json
results/Unitech/: pm2-2015-12-29.json  pm2-2018-12-19.json
results/adam-p/: markdown-here-2012-12-12.json  markdown-here-2015-12-02.json
results/adobe/: brackets-2012-12-31.json  brackets-2015-12-30.json  brackets-2018-12-03.json
results/airbnb/: javascript-2015-12-31.json  javascript-2018-12-28.json
results/alvarotrigo/: fullPage.js-2015-12-08.json  fullPage.js-2018-12-11.json
results/angular/: angular.js-2012-12-31.json  angular.js-2015-12-31.json  angular.js-2018-12-29.json
results/aosabook/: 500lines-2015-12-27.json
results/apache/: incubator-echarts-2015-12-31.json  incubator-echarts-2018-12-29.json  incubator-superset-2015-12-29.json  incubator-superset-2018-12-31.json
results/atom/: atom-2012-12-31.json  atom-2015-12-30.json  atom-2018-12-29.json
results/axios/: axios-2015-12-24.json
results/babel/: babel-2012-12-30.json  babel-2015-12-31.json
results/balderdashy/: sails-2012-12-31.json  sails-2015-12-28.json  sails-2018-11-22.json
results/blueimp/: jQuery-File-Upload-2012-12-29.json  jQuery-File-Upload-2015-10-26.json  jQuery-File-Upload-2018-11-12.json
results/caolan/: async-2012-12-13.json  async-2015-12-30.json  async-2018-11-27.json
results/chartjs/: Chart.js-2015-12-31.json  Chart.js-2018-12-31.json
results/d3/: d3-2012-12-29.json  d3-2015-12-17.json
results/developit/: preact-2015-12-18.json  preact-2018-12-22.json
results/emberjs/: ember.js-2012-12-31.json  ember.js-2015-12-30.json  ember.js-2018-12-31.json
results/expressjs/: express-2009-12-31.json  express-2012-12-29.json  express-2015-12-18.json  express-2018-10-11.json
results/facebook/: create-react-app-2018-12-31.json  immutable-js-2015-12-21.json  immutable-js-2018-10-30.json  jest-2015-12-16.json  jest-2018-12-30.json  react-2015-12-30.json  react-2018-12-25.json
results/gatsbyjs/: gatsby-2015-12-27.json  gatsby-2018-12-31.json
results/github/: fetch-2015-11-03.json  fetch-2018-12-29.json
results/gothinkster/: realworld-2018-12-17.json
results/graphs/: Graphs.ipynb  medium_scrap.ipynb  projects_w_contributors.json
results/gulpjs/: gulp-2015-12-26.json  gulp-2018-12-10.json
results/h5bp/: html5-boilerplate-2012-12-28.json  html5-boilerplate-2015-11-30.json  html5-boilerplate-2018-12-17.json
results/hakimel/: reveal.js-2012-12-31.json  reveal.js-2015-12-27.json  reveal.js-2018-12-12.json
results/hammerjs/: hammer.js-2012-12-07.json  hammer.js-2015-12-28.json
results/hexojs/: hexo-2012-12-27.json  hexo-2015-12-30.json  hexo-2018-12-12.json
results/i0natan/: nodebestpractices-2018-12-29.json
results/impress/: impress.js-2012-11-26.json  impress.js-2018-12-17.json
results/jashkenas/: backbone-2012-12-30.json  backbone-2015-12-29.json  underscore-2009-12-11.json  underscore-2012-12-29.json  underscore-2015-12-18.json
results/jaywcjlove/: awesome-mac-2018-12-21.json
results/jondot/: awesome-react-native-2018-12-06.json
results/jquery/: jquery-2009-12-31.json  jquery-2012-12-31.json  jquery-2015-12-03.json  jquery-2018-12-14.json
results/justjavac/: awesome-wechat-weapp-2018-12-26.json
results/kenwheeler/: slick-2015-12-27.json
results/knsv/: mermaid-2015-12-27.json  mermaid-2018-12-18.json
results/koajs/: koa-2015-11-25.json  koa-2018-12-27.json
results/leonardomso/: 33-js-concepts-2018-12-31.json
results/lodash/: lodash-2009-12-11.json  lodash-2012-12-31.json  lodash-2015-12-30.json  lodash-2018-12-27.json
results/lord/: slate-2015-12-20.json
results/meteor/: meteor-2012-12-31.json  meteor-2015-12-31.json  meteor-2018-12-06.json
results/moment/: moment-2012-12-30.json  moment-2015-12-31.json  moment-2018-12-13.json
results/mozilla/: pdf.js-2012-12-28.json  pdf.js-2015-12-30.json  pdf.js-2018-12-31.json
results/mrdoob/: three.js-2012-12-31.json  three.js-2015-12-31.json  three.js-2018-12-31.json
results/mui-org/: material-ui-2018-12-31.json
results/nylas/: nylas-mail-2015-12-31.json
results/parcel-bundler/: parcel-2018-12-31.json
results/photonstorm/: phaser-2015-12-15.json  phaser-2018-12-26.json
results/pixijs/: pixi.js-2015-12-30.json  (+1 more)
src/: Analyze.hs  AnalyzeContent.hs  Data.hs  JsAnalyze.hs  Main.hs  Projects.hs
talk/: custom.css  talk.asciidoc  talk.html
test/: AstSpec.hs
(+58 files in other folders)
