name:                js-analyzer
version:             0.1.0.0
synopsis:            Analyze JavaScript repositories
description:         Analyze JavaScript repositories for common patterns
homepage:            https://github.com/Luftzig/js-analyzer#readme
license:             BSD3
license-file:        LICENSE
author:              Yoav Luft
maintainer:          yoav.luft@gmail.com
copyright:           2018 Yoav Luft
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
  type:     git
  location: https://github.com/Luftzig/js-analyzer.git

executable js-analyzer
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Analyze, Data
  build-depends:       base >= 4.7 && < 5
               ,       github >= 0.19
               ,       language-ecmascript
               ,       text
               ,       bytestring
               ,       optparse-applicative
               ,       conduit >= 1.3.0
               ,       conduit-extra
               ,       http-conduit
               ,       network-uri
               ,       tar-conduit >= 0.2.3
               ,       exceptions
               ,       primitive
               ,       resourcet
               ,       transformers-base >= 0.4.4
