name:                js-analyzer
version:             0.1.0.0
synopsis:            Analyze JavaScript repositories
description:         Analyze JavaScript repositories for common patterns
homepage:            https://github.com/Luftzig/js-analyzer#readme
license:             BSD3
license-file:        LICENSE
author:              Yoav Luft
maintainer:          yoav.luft@gmail.com
copyright:           2018 Yoav Luft
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
  type:     git
  location: https://github.com/Luftzig/js-analyzer.git

library
  hs-source-dirs:      src
  exposed-modules:     AnalyzeContent
                     , Data
                     , Analyze.WalkAst
                     , Projects
                     , JsAnalyze
  default-language:    Haskell2010
  build-depends: base >= 4.7 && < 5
               , github >= 0.19
               , text
               , bytestring
               , streaming-bytestring
               , optparse-applicative
               , conduit >= 1.3.0
               , conduit-extra
               , http-conduit
               , network-uri
               , tar-conduit >= 0.2.3
               , exceptions
               , primitive
               , resourcet
               , transformers-base >= 0.4.4
               , aeson
               , filepath
               , vector
               , directory
               , time
               , process
               , either
               , lens-aeson
               , lens
               , base64-bytestring
               , containers
               , unordered-containers


executable js-analyzer
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       AnalyzeContent, Data, Projects, JsAnalyze, Analyze.WalkAst
  build-depends: base
               , js-analyzer
               , github >= 0.19
               , text
               , bytestring
               , streaming-bytestring
               , optparse-applicative
               , conduit >= 1.3.0
               , conduit-extra
               , http-conduit
               , network-uri
               , tar-conduit >= 0.2.3
               , exceptions
               , primitive
               , resourcet
               , transformers-base >= 0.4.4
               , aeson
               , aeson-pretty
               , filepath
               , vector
               , directory
               , time
               , process
               , either
               , lens-aeson
               , lens
               , base64-bytestring
               , containers
               , unordered-containers



test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base ==4.*
    , hspec ==2.*
    , aeson
    , js-analyzer
    , text
  other-modules:
      AstSpec
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
